RESOLVED FIXED94052
Null checks of m_frame->document()->domWindow() aren't needed
https://bugs.webkit.org/show_bug.cgi?id=94052
Summary Null checks of m_frame->document()->domWindow() aren't needed
WebKit Review Bot
Reported 2012-08-14 17:29:43 PDT
Null checks of m_frame->document()->domWindow() aren't needed Requested by abarth on #webkit.
Attachments
Patch (3.85 KB, patch)
2012-08-16 14:36 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-16 14:36:34 PDT
WebKit Review Bot
Comment 2 2012-08-16 15:30:03 PDT
Comment on attachment 158906 [details] Patch Clearing flags on attachment: 158906 Committed r125815: <http://trac.webkit.org/changeset/125815>
WebKit Review Bot
Comment 3 2012-08-16 15:30:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.