Null checks of m_frame->document()->domWindow() aren't needed https://bugs.webkit.org/show_bug.cgi?id=94052

Reviewed by Eric Seidel.

If a document is attached to a frame, then its DOMWindow is necessarily
non-0. Checking for 0 is needless.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::checkLoadComplete):
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::stopLoading):
(WebCore::FrameLoader::didOpenURL):
(WebCore::FrameLoader::prepareForCachedPageRestore):


Canonical link: https://commits.webkit.org/112070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125815 268f45cc-cd09-0410-ab3c-d52691b4dbfc